<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.presentation.shoe_listing.ShoeViewModel" />
    </data>

    <!-- Constraint Layout because layout is complicated and Constraint Layout is flatten layout
    and easy to render and to position the bottom buttons correctly in a simple way-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        tools:context=".presentation.shoe_details.ShoeDetailsFragment">

        <TextView
            android:id="@+id/txtShoeName"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/edtShoeName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edtShoeName" />

        <EditText
            android:id="@+id/edtShoeName"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/shoe_name_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={shoeViewModel.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtShoeName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtCompanyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/edtCompanyName"
            app:layout_constraintStart_toStartOf="@id/txtShoeName"
            app:layout_constraintTop_toTopOf="@id/edtCompanyName" />

        <EditText
            android:id="@+id/edtCompanyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/company_name_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={shoeViewModel.company}"
            app:layout_constraintEnd_toEndOf="@id/edtShoeName"
            app:layout_constraintStart_toStartOf="@id/edtShoeName"
            app:layout_constraintTop_toBottomOf="@id/edtShoeName" />

        <TextView
            android:id="@+id/txtShoeSize"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_size"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/edtShoeSize"
            app:layout_constraintStart_toStartOf="@id/txtCompanyName"
            app:layout_constraintTop_toTopOf="@id/edtShoeSize" />

        <EditText
            android:id="@+id/edtShoeSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/shoe_size_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:text="@={shoeViewModel.size}"
            app:layout_constraintEnd_toEndOf="@id/edtCompanyName"
            app:layout_constraintStart_toStartOf="@id/edtCompanyName"
            app:layout_constraintTop_toBottomOf="@id/edtCompanyName" />

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/description"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/txtShoeSize"
            app:layout_constraintTop_toBottomOf="@id/edtShoeSize" />

        <EditText
            android:id="@+id/edtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/description_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|text"
            android:text="@={shoeViewModel.description}"
            app:layout_constraintEnd_toEndOf="@id/edtShoeSize"
            app:layout_constraintStart_toStartOf="@id/txtShoeSize"
            app:layout_constraintTop_toBottomOf="@id/txtDescription" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/save_button"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorAccent"
            android:text="@string/cancel_button"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>