<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Constraint Layout because I want to have more control on where the items will be displayed on the screen-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingHorizontal="@dimen/fragment_horizontal_margin"
        android:paddingVertical="@dimen/fragment_vertical_margin"
        tools:context=".presentation.Login.LoginFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/prompt_email"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/txtPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="@string/email_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtEmail"
            app:layout_constraintTop_toTopOf="@id/txtEmail" />

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/edtPassword" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtPassword"
            app:layout_constraintTop_toBottomOf="@id/edtEmail" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/colorAccent"
            android:text="@string/action_login"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtPassword" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/colorAccent"
            android:text="@string/action_register"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>